<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <LinearLayout
        android:id="@+id/center_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color3"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/item_height_normal"
        android:paddingLeft="@dimen/padding_large"
        android:paddingRight="@dimen/padding_large"
        android:paddingTop="@dimen/item_height_normal"
        app:layout_widthPercent="45%">

        <EditText
            android:id="@+id/username_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:background="@drawable/edit_normal_selector"
            android:hint="@string/username_hint"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_small"
            android:singleLine="true"
            android:textColor="@color/textcolor_black"
            android:textColorHint="@color/textcolor_hint"
            android:textSize="@dimen/text_size_xl" />

        <EditText
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@drawable/edit_normal_selector"
            android:hint="@string/password_hint"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:paddingLeft="@dimen/padding_small"
            android:singleLine="true"
            android:textColor="@color/textcolor_black"
            android:textColorHint="@color/textcolor_hint"
            android:textSize="@dimen/text_size_xl" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_small"
            android:layout_marginTop="@dimen/margin_large_l"
            android:background="@drawable/place_order_button_bg_selector"
            android:text="@string/login"
            android:textColor="@color/text_click_selector"
            android:textSize="@dimen/text_size_xxl" />
    </LinearLayout>

</android.support.percent.PercentFrameLayout>
